@@ -12,6 +12,8 @@ Version 0.4c
 * Continuation on the combat rewrite:
  - Pierce replaced
  - Dirty blow replaced
+ - Hamstring replaced
+ - Kicksand replaced
  - Cooldowns on Bash/Grand slam reduced
 
 --------------------------------------------
